Fix jvm-opts in AOT.